--- a/explore-platform/index.html
+++ b/explore-platform/index.html
@@ -160,7 +160,7 @@
         </div>
         <div class="button-row">
           <a class="primary-button" href="https://rmallorybpc.github.io/marketedgeglobal/#contact">
-            Request access
+            Get started
           </a>
           <a href="https://rmallorybpc.github.io/marketedgeglobal/">Back to overview</a>
         </div>
