--- a/public/explore-platform/index.html
+++ b/public/explore-platform/index.html
@@ -159,7 +159,10 @@
           </p>
         </div>
         <div class="button-row">
-          <a class="primary-button" href="https://rmallorybpc.github.io/marketedgeglobal/#contact">
+          <a
+            class="primary-button"
+            href="https://rmallorybpc.github.io/marketedgeglobal/explore-platform/bd-assistant/"
+          >
             BD Assistant
           </a>
           <a href="https://rmallorybpc.github.io/marketedgeglobal/">Back to overview</a>
