Add BD Assistant details section and update navigation links in Explore Platform

--- a/explore-platform/bd-assistant/index.html
+++ b/explore-platform/bd-assistant/index.html
@@ -155,8 +155,11 @@
           <p>Ask the BD Assistant for regional insights, account briefs, and competitive positioning.</p>
         </div>
         <div class="button-row">
-          <a class="primary-button" href="https://rmallorybpc.github.io/marketedgeglobal/#bd-assistant">
-            Open BD Assistant
+          <a
+            class="primary-button"
+            href="https://rmallorybpc.github.io/marketedgeglobal/explore-platform/bd-assistant/"
+          >
+            BD Assistant
           </a>
           <a href="https://rmallorybpc.github.io/marketedgeglobal/explore-platform/">Back to Explore Platform</a>
         </div>
