--- a/explore-platform/index.html
+++ b/explore-platform/index.html
@@ -130,6 +130,27 @@
         color: #e0e7ff;
       }
 
+      ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        display: grid;
+        gap: 0.75rem;
+        color: #cbd5f5;
+        text-align: left;
+      }
+
+      li {
+        display: flex;
+        gap: 0.5rem;
+        align-items: flex-start;
+        justify-content: flex-start;
+      }
+
+      li span {
+        color: #818cf8;
+      }
+
       a {
         color: #a5b4fc;
       }
@@ -167,6 +188,30 @@
           </a>
           <a href="https://rmallorybpc.github.io/marketedgeglobal/">Back to overview</a>
         </div>
+      </section>
+
+      <section class="card" aria-label="BD Assistant details">
+        <div>
+          <p style="text-transform: uppercase; letter-spacing: 0.2em; font-size: 0.75rem; color: #94a3b8;">
+            BD Assistant
+          </p>
+          <h2>Accelerate business development with AI</h2>
+          <p>Ask the BD Assistant for regional insights, account briefs, and competitive positioning.</p>
+        </div>
+        <div class="button-row">
+          <a
+            class="primary-button"
+            href="https://rmallorybpc.github.io/marketedgeglobal/explore-platform/bd-assistant/"
+          >
+            BD Assistant
+          </a>
+          <a href="https://rmallorybpc.github.io/marketedgeglobal/">Back to overview</a>
+        </div>
+        <ul>
+          <li><span>•</span>Draft outreach notes and call prep in seconds.</li>
+          <li><span>•</span>Compare segment performance by region or vertical.</li>
+          <li><span>•</span>Summarize shifts in pricing and competitive moves.</li>
+        </ul>
       </section>
 
       <p>Return to the <a href="/">homepage</a>.</p>
