Update links to use the new MarketEdge Global domain

--- a/explore-platform/index.html
+++ b/explore-platform/index.html
@@ -159,10 +159,10 @@
   <body>
     <header>
       <nav aria-label="Primary">
-        <a href="https://rmallorybpc.github.io/marketedgeglobal/">MarketEdge Global</a>
-        <a href="https://rmallorybpc.github.io/marketedgeglobal/#features">Features</a>
-        <a href="https://rmallorybpc.github.io/marketedgeglobal/#insights">Insights</a>
-        <a href="https://rmallorybpc.github.io/marketedgeglobal/#contact">Contact</a>
+        <a href="https://marketedgeglobal.github.io/marketedgeglobal/">MarketEdge Global</a>
+        <a href="https://marketedgeglobal.github.io/marketedgeglobal/#features">Features</a>
+        <a href="https://marketedgeglobal.github.io/marketedgeglobal/#insights">Insights</a>
+        <a href="https://marketedgeglobal.github.io/marketedgeglobal/#contact">Contact</a>
       </nav>
     </header>
     <main>
