--- a/explore-platform/bd-assistant/index.html
+++ b/explore-platform/bd-assistant/index.html
@@ -12,7 +12,7 @@
         <head>
           <meta charset="UTF-8" />
           <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-          <meta http-equiv="refresh" content="0; url=https://rmallorybpc.github.io/marketedgeglobal/explore-platform/" />
+          <meta http-equiv="refresh" content="0; url=https://marketedgeglobal.github.io/marketedgeglobal/explore-platform/" />
           <meta name="robots" content="noindex" />
           <title>Page removed | MarketEdge Global</title>
         </head>
