Refactor Ranking Tool section layout for improved structure and clarity

--- a/public/explore-platform/index.html
+++ b/public/explore-platform/index.html
@@ -171,18 +171,23 @@
         <p>Choose a workspace or jump to a section of MarketEdge Global.</p>
       </div>
 
-      <section class="card" aria-labelledby="ranking-tool">
-        <h2 id="ranking-tool">RANKING TOOL</h2>
-        <p>
-          Compares value chains such as climate‑smart rice, shrimp, and bananas, highlighting relative strengths and
-          weaknesses.
-        </p>
-        <ul>
-          <li><span>•</span>Assess potential to generate income.</li>
-          <li><span>•</span>Evaluate support for vulnerable groups.</li>
-          <li><span>•</span>Measure sustainability contributions.</li>
-          <li><span>•</span>Surface near‑term opportunities for improvement.</li>
-        </ul>
+      <section class="menu-grid" aria-labelledby="ranking-tool">
+        <div>
+          <h2 id="ranking-tool">RANKING TOOL</h2>
+          <p>Compare value chains</p>
+          <p>
+            Compares value chains such as climate‑smart rice, shrimp, and bananas, highlighting relative strengths and
+            weaknesses.
+          </p>
+        </div>
+        <div class="card">
+          <ul>
+            <li><span>•</span>Assess potential to generate income.</li>
+            <li><span>•</span>Evaluate support for vulnerable groups.</li>
+            <li><span>•</span>Measure sustainability contributions.</li>
+            <li><span>•</span>Surface near‑term opportunities for improvement.</li>
+          </ul>
+        </div>
       </section>
 
       <p>Return to the <a href="/marketedgeglobal/">homepage</a>.</p>
