--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/icons/assistant.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="text/javascript">
+      (function (location) {
+        if (location.search.startsWith("?/") ) {
+          const decoded = location.search
+            .slice(2)
+            .split("&")
+            .map((segment) => segment.replace(/~and~/g, "&"))
+            .join("?");
+          window.history.replaceState(null, "", location.pathname + decoded + location.hash);
+        }
+      })(window.location);
+    </script>
     <title>MarketEdge</title>
   </head>
   <body>
