--- a/public/explore-platform/index.html
+++ b/public/explore-platform/index.html
@@ -3,229 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Explore Platform | MarketEdge Global</title>
-    <style>
-      :root {
-        color-scheme: dark;
-      }
-
-      body {
-        margin: 0;
-        font-family: "Inter", "Segoe UI", system-ui, -apple-system, sans-serif;
-        background: #020617;
-        color: #e2e8f0;
-        min-height: 100vh;
-      }
-
-      header {
-        padding: 1.5rem 1.5rem 0;
-        display: flex;
-        justify-content: center;
-      }
-
-      nav {
-        display: flex;
-        gap: 1.5rem;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        font-size: 0.95rem;
-      }
-
-      nav a {
-        color: #e2e8f0;
-        text-decoration: none;
-        letter-spacing: 0.01em;
-      }
-
-      nav a:hover {
-        color: #a5b4fc;
-      }
-
-      main {
-        padding: 3rem 1.5rem 4rem;
-        display: grid;
-        gap: 2.5rem;
-        place-items: center;
-        text-align: center;
-      }
-
-      h1 {
-        font-size: clamp(2rem, 5vw, 3.5rem);
-        margin: 0 0 1rem;
-      }
-
-      p {
-        margin: 0.5rem 0 0;
-        color: #94a3b8;
-      }
-
-      .card {
-        max-width: 720px;
-        width: min(720px, 100%);
-        border-radius: 1.5rem;
-        border: 1px solid #1e293b;
-        background: #0f172a;
-        padding: 2rem;
-        display: grid;
-        gap: 1.5rem;
-      }
-
-      .card h2 {
-        margin: 0;
-        font-size: 1.75rem;
-      }
-
-      .button-row {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 1rem;
-        justify-content: center;
-      }
-
-      .button-row a {
-        text-decoration: none;
-        padding: 0.75rem 1.5rem;
-        border-radius: 999px;
-        border: 1px solid #334155;
-        color: #e2e8f0;
-        font-weight: 600;
-      }
-
-      .button-row a:hover {
-        border-color: #818cf8;
-        color: #e0e7ff;
-      }
-
-      .primary-button {
-        background: #6366f1;
-        border-color: #6366f1;
-        color: #0f172a;
-      }
-
-      .primary-button:hover {
-        background: #818cf8;
-        border-color: #818cf8;
-        color: #0f172a;
-      }
-
-      .menu-grid {
-        display: grid;
-        gap: 1rem;
-        grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      }
-
-      .split-grid {
-        display: grid;
-        gap: 2.5rem;
-        align-items: center;
-      }
-
-      @media (min-width: 900px) {
-        .split-grid {
-          grid-template-columns: 1.05fr 0.95fr;
-        }
-      }
-
-      .menu-grid a {
-        text-decoration: none;
-        padding: 0.85rem 1.25rem;
-        border-radius: 0.85rem;
-        border: 1px solid #1e293b;
-        background: #0b1220;
-        color: #e2e8f0;
-        font-weight: 600;
-      }
-
-      .menu-grid a:hover {
-        border-color: #818cf8;
-        color: #e0e7ff;
-      }
-
-      ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        display: grid;
-        gap: 0.75rem;
-        color: #cbd5f5;
-        text-align: left;
-      }
-
-      li {
-        display: flex;
-        gap: 0.5rem;
-        align-items: flex-start;
-        justify-content: flex-start;
-      }
-
-      li span {
-        color: #818cf8;
-      }
-
-      a {
-        color: #a5b4fc;
-      }
-
-      .text-overline {
-        margin: 0 0 0.75rem;
-        text-transform: uppercase;
-        letter-spacing: 0.2em;
-        font-size: 0.7rem;
-        color: #64748b;
-      }
-    </style>
+    <title>Redirecting | MarketEdge Global</title>
+    <script type="text/javascript">
+      var pathSegmentsToKeep = 1;
+      var location = window.location;
+      location.replace(
+        location.protocol +
+          "//" +
+          location.hostname +
+          (location.port ? ":" + location.port : "") +
+          location.pathname
+            .split("/")
+            .slice(0, 1 + pathSegmentsToKeep)
+            .join("/") +
+          "/?/" +
+          location.pathname
+            .split("/")
+            .slice(1 + pathSegmentsToKeep)
+            .join("/")
+            .replace(/&/g, "~and~") +
+          (location.search ? "&" + location.search.slice(1).replace(/&/g, "~and~") : "") +
+          location.hash
+      );
+    </script>
   </head>
-  <body>
-    <header>
-      <nav aria-label="Primary">
-        <a href="https://marketedgeglobal.github.io/marketedgeglobal/">MarketEdge Global</a>
-        <a href="https://marketedgeglobal.github.io/marketedgeglobal/#features">Features</a>
-        <a href="https://marketedgeglobal.github.io/marketedgeglobal/#insights">Insights</a>
-        <a href="https://marketedgeglobal.github.io/marketedgeglobal/#contact">Contact</a>
-      </nav>
-    </header>
-    <main>
-      <section class="split-grid" aria-labelledby="explore-platform">
-        <div>
-          <p class="text-overline">Explore Platform</p>
-          <h1 id="explore-platform">Explore MarketEdge capabilities</h1>
-          <p>Review the platform highlights and open the BD Assistant when you need real-time support.</p>
-          <div class="button-row">
-            <a class="primary-button" href="https://marketedgeglobal.github.io/marketedgeglobal/">
-              Open BD Assistant
-            </a>
-          </div>
-        </div>
-        <div class="card">
-          <ul>
-            <li><span>•</span>Generate briefs for high-priority accounts.</li>
-            <li><span>•</span>Compare segment performance across regions.</li>
-            <li><span>•</span>Summarize competitive shifts in minutes.</li>
-          </ul>
-        </div>
-      </section>
-
-      <section class="split-grid" aria-labelledby="ranking-tool">
-        <div>
-          <p class="text-overline">Ranking Tool</p>
-          <h2 id="ranking-tool">Compare value chains</h2>
-          <p>
-            Compares value chains such as climate‑smart rice, shrimp, and bananas, highlighting relative strengths and
-            weaknesses.
-          </p>
-        </div>
-        <div class="card">
-          <ul>
-            <li><span>•</span>Assess potential to generate income.</li>
-            <li><span>•</span>Evaluate support for vulnerable groups.</li>
-            <li><span>•</span>Measure sustainability contributions.</li>
-            <li><span>•</span>Surface near‑term opportunities for improvement.</li>
-          </ul>
-        </div>
-      </section>
-
-      <p>Return to the <a href="/marketedgeglobal/">homepage</a>.</p>
-    </main>
-  </body>
+  <body></body>
 </html>
